[package]
name = "rfline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
log = "0.4.20"
env_logger = "0.10.1"
bytes = "1.5.0"

[dependencies.tokio]
version = "1.35.1"
features = ["full"]
